# LoudReadingSkill

./: .gitignore  .pre-commit-config.yaml  README.md  answers.json  elf77.txt  justfile  lokomotywa.txt  pyproject.toml  reading.py  recorder.py  scores.json  scoring.py  speech2text.py  voice_sample.py  whisper_server.py
client/: __init__.py  iface.py  reading.py  recorder.py  speech2text.py
core/: __init__.py  config.py  iface_scoring.py  levenshtein.py  local_whisper.py  respeak_sentence.py  scoring.py  scoring_arcade.py  scoring_serialization.py  scoring_story.py  sentence_accuracy.py  sentence_breaking.py  text2speech_gtts.py  text2speech_local.py  util.py  voice_sample.py
data/: sentences.txt
server/: whisper_server.py
tests/: test_app.py  test_score_sentence.py
