[tool.poetry]
name = "loudreadingskill"
version = "0.1.0"
description = ""
authors = ["Silent <mikolaj@statystyka.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
openai = "^1.30.3"
openai-whisper = {git = "https://github.com/openai/whisper.git", branch = "main"}
gtts = "^2.5.1"
sounddevice = "^0.4.7"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
