[tool.poetry]
name = "loudreadingskill"
version = "1.0.0"
description = ""
authors = ["Silent <mikolaj@statystyka.net>"]
readme = "README.md"
packages = [
    { include = "client", from = "." },
    { include = "server", from = "." },
    { include = "core", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
openai = "^1.30.3"
openai-whisper = { git = "https://github.com/openai/whisper.git", branch = "main", optional = true }
gtts = "^2.5.1"
sounddevice = "^0.4.7"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
numpy = "^2.0.0"

[tool.poetry.extras]
local = ["openai-whisper"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loudreading_server = "server.whisper_server:main"
loudreading_client = "client.reading:main"
